filled out manage member and manage provider and added exit conditions

--- a/Team7_Analysis/Team7_P1_Fixes/Report.html
+++ b/Team7_Analysis/Team7_P1_Fixes/Report.html
@@ -194,20 +194,32 @@
         </li>
         <li>Manage Member
             <ul>
-                <li>Context:</li>
+                <li>Context: The operator wants to update, add, or remove a member</li>
                 <li>Actors: Operator</li>
                 <li>Main Success Scenario:
                     <ol>
+                        <li>Operator accesses the terminal</li>
+                        <li>They navigate to the edit menu</li>
+                        <li>Operator enters the name of the member to be managed</li>
+                        <li>Operator either deletes the member, updates their information, or creates a new member</li>
+                        <li>Exit Condition: </li>
+                        <li>Member has been managed</li>
                     </ol>
                 </li>
             </ul>
         </li>
         <li>Manage Provider
             <ul>
-                <li>Context:</li>
+                <li>Context: The operator wants to update, add, or remove a provider</li>
                 <li>Actors: Operator</li>
                 <li>Main Success Scenario:
                     <ol>
+                        <li>Operator accesses the terminal</li>
+                        <li>They navigate to the edit menu</li>
+                        <li>Operator enters the name of the operator to be managed</li>
+                        <li>Operator either deletes the operator, updates their information, or creates a new operator</li>
+                        <li>Exit Condition: </li>
+                        <li>Operator has been managed</li>
                     </ol>
                 </li>
             </ul>
