--- a/Team7_Analysis/Team7_P1_Fixes/Report.html
+++ b/Team7_Analysis/Team7_P1_Fixes/Report.html
@@ -219,7 +219,7 @@
                         <li>Operator enters the name of the operator to be managed</li>
                         <li>Operator either deletes the operator, updates their information, or creates a new operator</li>
                         <li>Exit Condition: </li>
-                        <li>Operator has been managed</li>
+                        <li>Provider has been managed</li>
                     </ol>
                 </li>
             </ul>
