--- a/Team7_Analysis/Team7_P1_Fixes/Report.html
+++ b/Team7_Analysis/Team7_P1_Fixes/Report.html
@@ -216,8 +216,8 @@
                     <ol>
                         <li>Operator accesses the terminal</li>
                         <li>They navigate to the edit menu</li>
-                        <li>Operator enters the name of the operator to be managed</li>
-                        <li>Operator either deletes the operator, updates their information, or creates a new operator</li>
+                        <li>Operator enters the name of the provider to be managed</li>
+                        <li>Operator either deletes the provider, updates their information, or creates a new provider</li>
                         <li>Exit Condition: </li>
                         <li>Provider has been managed</li>
                     </ol>
