added comments to mark fixes needed

--- a/Team7_Analysis/Team7_P1_Fixes/Report.html
+++ b/Team7_Analysis/Team7_P1_Fixes/Report.html
@@ -239,6 +239,7 @@
                         <li>Operator accesses the terminal</li>
                         <li>They navigate to the edit menu</li>
                         <li>Operator enters the name of the member to be managed</li>
+                        <!-- Should probably divide these in extensions instead -->
                         <li>Operator either deletes the member, updates their information, or creates a new member</li>
                     </ol>
                         <li>Exit Condition: </li>
@@ -255,6 +256,7 @@
                         <li>Operator accesses the terminal</li>
                         <li>They navigate to the edit menu</li>
                         <li>Operator enters the name of the provider to be managed</li>
+                        <!-- Should probably divide these in extensions instead -->
                         <li>Operator either deletes the provider, updates their information, or creates a new provider</li>
                     </ol>
                         <li>Exit Condition: </li>
