clarity fix for p2 paragraph

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -112,7 +112,8 @@
       <br> <strong>How will users interact with the system?</strong> 
       <br> &emsp; Users should be able to access data relating to themselves. They should be able to manage/update their 
       <br> &emsp; personal information. All users should be able to access the list of all services and service information
-      <br> &emsp; as well. It is necessary to have all users perform an authentication/log in process to keep their data secure. 
+      <br> &emsp; as well. It is necessary to have all users perform an authentication process to keep data secure. 
+      <br> &emsp; (One example of this is how members must have their card validated by the terminal.)
       <br> &emsp;&emsp;&emsp; a. Members should be able to see their updated balance after paying for services and/or paying member 
       <br> &emsp;&emsp;&emsp; fees. They will also be able to access and use the communications software. They should be able to 
       <br> &emsp;&emsp;&emsp; manage/update their personal information.
