--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -93,33 +93,37 @@
       <br> &emsp; we can model/mimic the organization, storage, and function of a database instead.
       <br>
       <br> <strong>Where will the data be stored?</strong>
-      <br> &emsp; Databases store data in a folder/table format. This ensures easy access and convenience in sorting 
-      <br> &emsp; and searching for specific information. This will also protect members' sensitive information. 
-      <br> &emsp; We will use a folder/table format to mimic a database.
+      <br> &emsp; Databases store data in a folder/table format. This ensures easy access and convenience in
+      <br> &emsp; sorting and searching for specific information. This will also protect members' sensitive
+      <br> &emsp; information. We will use a folder/table format to mimic a database.
       <br>
       <br> <strong>What hardware will be needed?</strong> 
-      <br> &emsp; The requirements for a database are: an operating system, a database server, processor cores, 8+ GB 
-      <br> &emsp; of RAM, and disk space (usually up to/around a few GB). All of the requirements scale up in amount/size
-      <br> &emsp; needed as the data increases. Since we are not using an actual database in the project, this can be modeled
-      <br> &emsp; on our members' laptops/computers (we will not have an actual database server).
+      <br> &emsp; The requirements for a database are: an operating system, a database server, processor cores, 
+      <br> &emsp; 8+ GB of RAM, and disk space (usually up to/around a few GB). All of the requirements scale up
+      <br> &emsp; in amount/size needed as the data increases. Since we are not using an actual database in the 
+      <br> &emsp; project, this can be modeled on our members' laptops/computers (we will not have an actual
+      <br> &emsp; database server).
       <br>
       <br> <strong>How will the ChocAn system you develop interact with other systems?</strong> 
-      <br> &emsp; The ChocAn system must be able to interact with payment systems (EFT and ACME) in order to conveniently
-      <br> &emsp; store both member and provider information, fees, and other data. It should be able to store data from
-      <br> &emsp; the terminal as well. It must also be able to process and store information from the communications 
-      <br> &emsp; software (which is being built by another company).
+      <br> &emsp; The ChocAn system must be able to interact with payment systems (EFT and ACME) in order to
+      <br> &emsp; conveniently store both member and provider information, fees, and other data. It should be able
+      <br> &emsp; to store data from the terminal as well. It must also be able to process and store information 
+      <br> &emsp; from the communications software (which is being built by another company).
       <br>
       <br> <strong>How will users interact with the system?</strong> 
-      <br> &emsp; Users should be able to access data relating to themselves. They should be able to manage/update their 
-      <br> &emsp; personal information. All users should be able to access the list of all services and service information
-      <br> &emsp; as well. It is necessary to have all users perform an authentication process to keep data secure. 
-      <br> &emsp; (One example of this is how members must have their card validated by the terminal.)
-      <br> &emsp;&emsp;&emsp; a. Members should be able to see their updated balance after paying for services and/or paying member 
-      <br> &emsp;&emsp;&emsp; fees. They will also be able to access and use the communications software. They should be able to 
-      <br> &emsp;&emsp;&emsp; manage/update their personal information.
-      <br> &emsp;&emsp;&emsp; b. Providers should be able to see data relating to themselves, their services, and their clients. 
-      <br> &emsp;&emsp;&emsp; c. Managers should have the most access of all users and should be able to see most member/provider 
-      <br> &emsp;&emsp;&emsp; info as well as services performed.
+      <br> &emsp; Users should be able to access data relating to themselves. They should be able to manage/update 
+      <br> &emsp; their personal information. All users should be able to access the list of all services and
+      <br> &emsp; service information as well. It is necessary to have all users perform an authentication process 
+      <br> &emsp; to keep data secure. (One example of this is how members must have their card validated by the 
+      <br> &emsp; terminal.)
+      <br> &emsp;&emsp;&emsp; a. Members should be able to see their updated balance after paying for services 
+      <br> &emsp;&emsp;&emsp; and/or paying member fees. They will also be able to access and use the communications 
+      <br> &emsp;&emsp;&emsp; software. They should be able to manage/update their personal information.
+      <br> &emsp;&emsp;&emsp; b. Providers should be able to see data relating to themselves, their services, and
+      <br> &emsp;&emsp;&emsp; their clients. 
+      <br> &emsp;&emsp;&emsp; c. Managers should have the most access of all users and should be able to see most 
+      <br> &emsp;&emsp;&emsp;  member/provider info as well as services performed.
+      <br>
     </p>
 
     <!-- Class Diagram -->
