Edited some use cases

--- a/Team7_Analysis/Team7_P1_Fixes/Report.html
+++ b/Team7_Analysis/Team7_P1_Fixes/Report.html
@@ -238,12 +238,35 @@
                     <ol>
                         <li>Operator accesses the terminal</li>
                         <li>They navigate to the edit menu</li>
-                        <li>Operator enters the name of the member to be managed</li>
-                        <!-- Should probably divide these in extensions instead -->
-                        <li>Operator either deletes the member, updates their information, or creates a new member</li>
+                        <li>Operator opts to add a member to the directory</li>
+                        <li>Operator enters new meber's information</li>
+                        <li>System adds new member to database</li>
                     </ol>
                         <li>Exit Condition: </li>
-                        <li>Member has been managed</li>
+                        <li>Member has been added</li>
+                </li>
+                <li>Extensions:
+                    <ul>
+                        <li>3a. Operator opts to remove a member
+                            <ul>
+                                <li>3a.1 Operator opts to remove a member</li>
+                                <li>3a.2 Operator enters name of member to remove</li>
+                                <li>3a.3 System removes member from database</li>
+                                <li>Exit Contiton:</li>
+                                <li>Member has been removed</li>
+                            </ul>
+                        </li>
+                        <li>3a. Operator opts to update a member
+                            <ul>
+                                <li>3a.1 Operator opts to update a member</li>
+                                <li>3a.2 Operator enters name of member to update</li>
+                                <li>3a.3 Operator makes the chnages to the member's profile</li>
+                                <li>3a.4 System updates member in database</li>
+                                <li>Exit Contiton:</li>
+                                <li>Member has been updated</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </li>
@@ -255,12 +278,35 @@
                     <ol>
                         <li>Operator accesses the terminal</li>
                         <li>They navigate to the edit menu</li>
-                        <li>Operator enters the name of the provider to be managed</li>
-                        <!-- Should probably divide these in extensions instead -->
-                        <li>Operator either deletes the provider, updates their information, or creates a new provider</li>
+                        <li>Operator opts to add a provider</li>
+                        <li>Operator enters the name of the provider to be added</li>
+                        <li>System adds provider to the database</li>
                     </ol>
                         <li>Exit Condition: </li>
-                        <li>Provider has been managed</li>
+                        <li>Provider has been added</li>
+                </li>
+                <li>Extensions:
+                    <ul>
+                        <li>3a. Operator opts to remove a provider
+                            <ul>
+                                <li>3a.1 Operator opts to remove a provider</li>
+                                <li>3a.2 Operator enters name of provider to remove</li>
+                                <li>3a.3 System removes provider from database</li>
+                                <li>Exit Contiton:</li>
+                                <li>Provider has been removed</li>
+                            </ul>
+                        </li>
+                        <li>3a. Operator opts to update a provider
+                            <ul>
+                                <li>3a.1 Operator opts to update a provider</li>
+                                <li>3a.2 Operator enters name of provider to update</li>
+                                <li>3a.3 Operator makes the chnages to the provider's profile</li>
+                                <li>3a.4 System updates provider in database</li>
+                                <li>Exit Contiton:</li>
+                                <li>Provider has been updated</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </li>
