--- a/Team7_Analysis/Team7_P1_Fixes/Report.html
+++ b/Team7_Analysis/Team7_P1_Fixes/Report.html
@@ -327,12 +327,12 @@
                         <ul>
                             <li>2a. Member is invalid
                                 <ul>
-                                    <li>2a.1 Terminal displays Member Invalid</li>
+                                    <li>2a.1 Terminal displays "Member Invalid"</li>
                                     <li>2a.2 Return to step 1</li>
                                 </ul>
                             </li>
                             <li>2b. Member is suspended</li>
-                                <li>2b.1 Terminal display Member Suspended</li>
+                                <li>2b.1 Terminal displays "Member Suspended"</li>
                                 <li>2b.2 Provider shows member the fees that are owed</li>
                                 <li>2b.3 Member pays fees, return to step 1</li>
                             </li>
