--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -129,6 +129,30 @@
     <!-- Class Diagram -->
     <h1>Class Diagram</h1>
     <img src="./src/class_diagram.png">
+
     <!-- Activity Diagrams -->
+    <h1>Main Activity Diagram</h1>
+    <!-- <img src="./src/       .png"-->
+
+    <h1>1. Request Report</h1>
+    <!-- <img src="./src/       .png"-->
+
+    <h1>2. Run Main Accounting Procedure</h1>
+    <!-- <img src="./src/       .png"-->
+
+    <h1>3. Manage Member</h1>
+    <!-- <img src="./src/       .png"-->
+
+    <h1>4. Manage Provider</h1>
+    <!-- <img src="./src/       .png"-->
+
+    <h1>5. Validate Member</h1>
+    <!-- <img src="./src/       .png"-->
+
+    <h1>6. Bill ChocAn Member</h1>
+    <!-- <img src="./src/       .png"-->
+
+    <h1>7. Access Provider Directory</h1>
+    <!-- <img src="./src/       .png"-->
 
 </html>
