changed diagram name to match p2 pdf

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -126,8 +126,8 @@
       <br>
     </p>
 
-    <!-- Class Diagram -->
-    <h1>Class Diagram</h1>
+    <!-- Stereotyped Class Diagram -->
+    <h1>Stereotyped Class Diagram</h1>
     <img src="./src/class_diagram.png">
 
     <!-- Activity Diagrams -->
