--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -138,7 +138,7 @@
     <!-- <img src="./src/       .png">-->
 
     <h1>2. Run Main Accounting Procedure</h1>
-    <!-- <img src="./src/       .png">-->
+    <img src="./src/Main_Accounting_Procedurepng">
 
     <h1>3. Manage Member</h1>
     <!-- <img src="./src/       .png">-->
@@ -150,7 +150,7 @@
     <!-- <img src="./src/       .png">-->
 
     <h1>6. Bill ChocAn Member</h1>
-    <!-- <img src="./src/       .png">-->
+    <img src="./src/Bill ChocAn Member.png">
 
     <h1>7. Access Provider Directory</h1>
     <!-- <img src="./src/       .png">-->
