--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -138,7 +138,7 @@
     <!-- <img src="./src/       .png">-->
 
     <h1>2. Run Main Accounting Procedure</h1>
-    <img src="./src/Main_Accounting_Procedurepng">
+    <img src="./src/Main_Accounting_Procedure.png">
 
     <h1>3. Manage Member</h1>
     <!-- <img src="./src/       .png">-->
@@ -147,10 +147,10 @@
     <!-- <img src="./src/       .png">-->
 
     <h1>5. Validate Member</h1>
-    <!-- <img src="./src/       .png">-->
+    <img src="./src/Member Status.png">
 
     <h1>6. Bill ChocAn Member</h1>
-    <img src="./src/Bill ChocAn Member.png">
+    <img src="./src/Bill Choc An.png">
 
     <h1>7. Access Provider Directory</h1>
     <!-- <img src="./src/       .png">-->
