activity diagram fixes

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -11,25 +11,25 @@
             <td>Luca Conti</td>
             <td>11856871</td>
             <td>lconti1@crimson.ua.edu</td>
-            <td></td>
+            <td>2</td>
         </tr>
         <tr>
             <td>William Jefferson</td>
             <td>11930076</td>
             <td>wtjefferson@crimson.ua.edu</td>
-            <td></td>
+            <td>2</td>
         </tr>
         <tr>
             <td>Jacob Aid</td>
             <td>11950741</td>
             <td>jiaid@crimson.ua.edu</td>
-            <td></td>
+            <td>2</td>
         </tr>
         <tr>
             <td>Shanissee Lee</td>
             <td>12100396</td>
             <td>srlee2@crimson.ua.edu</td>
-            <td></td>
+            <td>2</td>
         </tr>
         <tr>
             <td>Caroline Johnson</td>
@@ -41,7 +41,7 @@
             <td>TJ Trueblood</td>
             <td>12075419</td>
             <td>tbtrueblood@crimson.ua.edu</td>
-            <td></td>
+            <td>2</td>
         </tr>
     </table>
 
@@ -147,10 +147,10 @@
     <!-- <img src="./src/       .png">-->
 
     <h1>5. Validate Member</h1>
-    <img src="./src/Member Status.png">
+    <img src="./src/Member_Status.png">
 
     <h1>6. Bill ChocAn Member</h1>
-    <img src="./src/Bill Choc An.png">
+    <img src="./src/Bill_ChocAn_Member.png">
 
     <h1>7. Access Provider Directory</h1>
     <!-- <img src="./src/       .png">-->
