Edited image source for Manage Member and Manage Provider

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -141,10 +141,10 @@
     <img src="./src/Main_Accounting_Procedure.png">
 
     <h1>3. Manage Member</h1>
-    <!-- <img src="./src/       .png">-->
+    <img src="./src/ManageMember.png">
 
     <h1>4. Manage Provider</h1>
-    <!-- <img src="./src/       .png">-->
+    <img src="./src/ManageProvider.png">
 
     <h1>5. Validate Member</h1>
     <img src="./src/Member_Status.png">
