--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -135,7 +135,7 @@
     <!-- <img src="./src/       .png">-->
 
     <h1>1. Request Report</h1>
-    <!-- <img src="./src/       .png">-->
+    <img src="./src/Request_Report.png">
 
     <h1>2. Run Main Accounting Procedure</h1>
     <img src="./src/Main_Accounting_Procedure.png">
