changed img src name

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -153,6 +153,6 @@
     <img src="./src/Bill_ChocAn_Member.png">
 
     <h1>7. Access Provider Directory</h1>
-    <!-- <img src="./src/       .png">-->
+    <img src="./src/AccessProviderDirectory.png">
 
 </html>
