added temporary bitbucket commit image (until the last member commits)

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -83,6 +83,11 @@
         </tr>
     </table>
 
+    <!--Bitbucket Statistics-->
+    <!--This is temporary for now-->
+    <img src="./src/bitbucket.png">
+
+
     <h1>Paragraph</h1>
     <p>The ChocAn System has several requirements that must be met in order for it to operate properly.
       <br>
