Added main activity diagram

--- a/Team7_Analysis/Report.html
+++ b/Team7_Analysis/Report.html
@@ -17,7 +17,7 @@
             <td>William Jefferson</td>
             <td>11930076</td>
             <td>wtjefferson@crimson.ua.edu</td>
-            <td>2</td>
+            <td>1</td>
         </tr>
         <tr>
             <td>Jacob Aid</td>
@@ -54,32 +54,32 @@
         <tr>
             <td>Luca Conti</td>
             <td>Class Diagram</td>
-            <td>20%</td>
+            <td>18%</td>
         </tr>
         <tr>
             <td>William Jefferson</td>
             <td>Activity Diagrams</td>
-            <td>16.25%</td>
+            <td>10%</td>
         </tr>
         <tr>
             <td>Jacob Aid</td>
             <td>Activity Diagrams</td>
-            <td>16.25%</td>
+            <td>18%</td>
         </tr>
          <tr>
             <td>Shanissee Lee</td>
             <td>Activity Diagrams</td>
-            <td>16.25%</td>
+            <td>18%</td>
         </tr>
         <tr>
             <td>Caroline Johnson</td>
             <td>Paragraph and Bitbucket statistics</td>
-            <td>15%</td>
+            <td>18%</td>
         </tr>
         <tr>
             <td>TJ Trueblood</td>
             <td>Activity Diagrams</td>
-            <td>16.25%</td>
+            <td>18%</td>
         </tr>
     </table>
 
@@ -137,7 +137,7 @@
 
     <!-- Activity Diagrams -->
     <h1>Main Activity Diagram</h1>
-    <!-- <img src="./src/       .png">-->
+    <img src="./src/full_system_use_case.png">
 
     <h1>1. Request Report</h1>
     <img src="./src/Request_Report.png">
