added member roles and percentages

--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -53,23 +53,23 @@
         </tr>
         <tr>
             <td>Luca Conti</td>
-            <td></td>
-            <td></td>
+            <td>Complete Class Diagram</td>
+            <td>20%</td>
         </tr>
         <tr>
             <td>William Jefferson</td>
-            <td></td>
-            <td></td>
+            <td>Complete Class Diagram</td>
+            <td>20%</td>
         </tr>
         <tr>
             <td>Jacob Aid</td>
-            <td></td>
-            <td></td>
+            <td>UML Sequence Diagrams</td>
+            <td>15%</td>
         </tr>
          <tr>
             <td>Shanissee Lee</td>
-            <td></td>
-            <td></td>
+            <td>Paragraph on Cohesion and Coupling</td>
+            <td>15%</td>
         </tr>
         <tr>
             <td>Caroline Johnson</td>
@@ -78,7 +78,7 @@
         </tr>
         <tr>
             <td>TJ Trueblood</td>
-            <td></td>
-            <td></td>
+            <td>UML Sequence Diagrams</td>
+            <td>15%</td>
         </tr>
     </table>
