--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -82,3 +82,41 @@
             <td>15%</td>
         </tr>
     </table>
+
+    <!--Bitbucket Statistics-->
+    <!--<img src="./src/bitbucket.png">-->
+
+    <!-- Complete Class Diagram -->
+    <h1>Complete Class Diagram</h1>
+    <!--<img src="./src/Class_Diagram.png">-->
+
+
+    <!-- UML Sequence Diagrams -->
+
+    <h1>1. Request Report</h1>
+    <!--<img src="./src/Request_Report.png">-->
+
+    <h1>2. Run Main Accounting Procedure</h1>
+    <!--<img src="./src/Main_Accounting_Procedure.png">-->
+
+    <h1>3. Manage Member</h1>
+    <!--<img src="./src/Manage_Member.png">-->
+
+    <h1>4. Manage Provider</h1>
+    <!--<img src="./src/Manage_Provider.png">-->
+
+    <h1>5. Validate Member</h1>
+    <!--<img src="./src/Validate_Member.png">-->
+
+    <h1>6. Bill ChocAn Member</h1>
+    <!--<img src="./src/Bill_ChocAn_Member.png">-->
+
+    <h1>7. Access Provider Directory</h1>
+    <!--<img src="./src/Access_Provider_Directory.png">-->
+
+
+    <!--Paragraph-->
+    <h1>Paragraph</h1>
+    <!--<p></p>-->
+
+</html>
