--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -92,6 +92,7 @@
 
 
     <!-- UML Sequence Diagrams -->
+    <h1>UML Sequence Diagrams</h1>
 
     <h1>1. Request Report</h1>
     <!--<img src="./src/Request_Report.png">-->
