--- a/Team7_Design/Team7_P2_Fixes/Report.html
+++ b/Team7_Design/Team7_P2_Fixes/Report.html
@@ -89,45 +89,15 @@
 
 
     <h1>Paragraph</h1>
-    <p>The ChocAn System has several requirements that must be met in order for it to operate properly.
+    <p>
       <br>
-      <br> <strong>What sections will be computerized and how?</strong>
-      <br> &emsp; Information such as the data corresponding to services, members, providers, as well as reports
-      <br> &emsp; should be computerized. This should be done by entering the information into a database.
-      <br> &emsp; For the purpose of this project, we will not use an actual database as it is too expensive, but
-      <br> &emsp; we can model/mimic the organization, storage, and function of a database instead.
-      <br>
-      <br> <strong>Where will the data be stored?</strong>
-      <br> &emsp; Databases store data in a folder/table format. This ensures easy access and convenience in
-      <br> &emsp; sorting and searching for specific information. This will also protect members' sensitive
-      <br> &emsp; information. We will use a folder/table format to mimic a database.
-      <br>
-      <br> <strong>What hardware will be needed?</strong> 
-      <br> &emsp; The requirements for a database are: an operating system, a database server, processor cores, 
-      <br> &emsp; 8+ GB of RAM, and disk space (usually up to/around a few GB). All of the requirements scale up
-      <br> &emsp; in amount/size needed as the data increases. Since we are not using an actual database in the 
-      <br> &emsp; project, this can be modeled on our members' laptops/computers (we will not have an actual
-      <br> &emsp; database server).
-      <br>
-      <br> <strong>How will the ChocAn system you develop interact with other systems?</strong> 
-      <br> &emsp; The ChocAn system must be able to interact with payment systems (EFT and ACME) in order to
-      <br> &emsp; conveniently store both member and provider information, fees, and other data. It should be able
-      <br> &emsp; to store data from the terminal as well. It must also be able to process and store information 
-      <br> &emsp; from the communications software (which is being built by another company).
-      <br>
-      <br> <strong>How will users interact with the system?</strong> 
-      <br> &emsp; Users should be able to access data relating to themselves. They should be able to manage/update 
-      <br> &emsp; their personal information. All users should be able to access the list of all services and
-      <br> &emsp; service information as well. It is necessary to have all users perform an authentication process 
-      <br> &emsp; to keep data secure. (One example of this is how members must have their card validated by the 
-      <br> &emsp; terminal.)
-      <br> &emsp;&emsp;&emsp; a. Members should be able to see their updated balance after paying for services 
-      <br> &emsp;&emsp;&emsp; and/or paying member fees. They will also be able to access and use the communications 
-      <br> &emsp;&emsp;&emsp; software. They should be able to manage/update their personal information.
-      <br> &emsp;&emsp;&emsp; b. Providers should be able to see data relating to themselves, their services, and
-      <br> &emsp;&emsp;&emsp; their clients. 
-      <br> &emsp;&emsp;&emsp; c. Managers should have the most access of all users and should be able to see most 
-      <br> &emsp;&emsp;&emsp;  member/provider info as well as services performed.
+      &emsp; Information such as the data corresponding to services, members, providers, as well as reports
+      should be computerized. This should be done by entering the information into a database. For the 
+      purpose of this project, we will not use an actual database, but we can mimic the organization, 
+      storage, and function of a database instead. The requiremements can be met by our members' computers. 
+      The ChocAn system must be able to interact with payment systems, the terminal, and other software in 
+      order to store data. Users should be able to manage/update data relating to themselves (and their 
+      clients if applicable). 
       <br>
     </p>
 
