Added Class Diagram

--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -88,7 +88,7 @@
 
     <!-- Complete Class Diagram -->
     <h1>Complete Class Diagram</h1>
-    <!--<img src="./src/Class_Diagram.png">-->
+    <img src="./src/class_diagram.png">
 
 
     <!-- UML Sequence Diagrams -->
