added sequence diagrams. may need fixes. changed diagram name format to match. removed placeholder.

--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -88,32 +88,32 @@
 
     <!-- Complete Class Diagram -->
     <h1>Complete Class Diagram</h1>
-    <img src="./src/class_diagram.png">
+    <img src="./src/ClassDiagram.png">
 
 
     <!-- UML Sequence Diagrams -->
     <h1>UML Sequence Diagrams</h1>
 
     <h1>1. Request Report</h1>
-    <!--<img src="./src/Request_Report.png">-->
+    <!--<img src="./src/RequestReport.png">-->
 
     <h1>2. Run Main Accounting Procedure</h1>
-    <!--<img src="./src/Main_Accounting_Procedure.png">-->
+    <!--<img src="./src/MainAccountingProcedure.png">-->
 
     <h1>3. Manage Member</h1>
-    <!--<img src="./src/Manage_Member.png">-->
+    <img src="./src/ManageMember.png">
 
     <h1>4. Manage Provider</h1>
-    <!--<img src="./src/Manage_Provider.png">-->
+    <img src="./src/ManageProvider.png">
 
     <h1>5. Validate Member</h1>
-    <!--<img src="./src/Validate_Member.png">-->
+    <!--<img src="./src/ValidateMember.png">-->
 
     <h1>6. Bill ChocAn Member</h1>
-    <!--<img src="./src/Bill_ChocAn_Member.png">-->
+    <!--<img src="./src/BillChocAnMember.png">-->
 
     <h1>7. Access Provider Directory</h1>
-    <!--<img src="./src/Access_Provider_Directory.png">-->
+    <!--<img src="./src/AccessProviderDirectory.png">-->
 
 
     <!--Paragraph-->
