added TJ's sequence diagrams

--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -107,13 +107,13 @@
     <img src="./src/ManageProvider.png">
 
     <h1>5. Validate Member</h1>
-    <!--<img src="./src/ValidateMember.png">-->
+    <img src="./src/ValidateMember.png">
 
     <h1>6. Bill ChocAn Member</h1>
     <!--<img src="./src/BillChocAnMember.png">-->
 
     <h1>7. Access Provider Directory</h1>
-    <!--<img src="./src/AccessProviderDirectory.png">-->
+    <img src="./src/AccessProviderDirectory.png">
 
 
     <!--Paragraph-->
