Edited image source for RequestReport and BillChocAnMember

--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -95,7 +95,7 @@
     <h1>UML Sequence Diagrams</h1>
 
     <h1>1. Request Report</h1>
-    <!--<img src="./src/RequestReport.png">-->
+    <img src="./src/RequestReport.png">
 
     <h1>2. Run Main Accounting Procedure</h1>
     <!--<img src="./src/MainAccountingProcedure.png">-->
@@ -110,7 +110,7 @@
     <img src="./src/ValidateMember.png">
 
     <h1>6. Bill ChocAn Member</h1>
-    <!--<img src="./src/BillChocAnMember.png">-->
+    <img src="./src/BillChocAnMember.png">
 
     <h1>7. Access Provider Directory</h1>
     <img src="./src/AccessProviderDirectory.png">
