--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -98,7 +98,7 @@
     <img src="./src/RequestReport.png">
 
     <h1>2. Run Main Accounting Procedure</h1>
-    <!--<img src="./src/MainAccountingProcedure.png">-->
+    <img src="./src/MainAccountingProcedure.png">
 
     <h1>3. Manage Member</h1>
     <img src="./src/ManageMember.png">
