--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -118,9 +118,9 @@
 
     <!--Paragraph-->
     <h1>Our system's design is good because it implements key aspects of quality modules, through high cohesion and low coupling. 
-        The classes we used demonstrate informational cohesion, meaning methods perform operate on the same information or data.
+        The classes we used demonstrate informational cohesion, meaning methods performed operate on the same information or data.
         Additionally, the classes have low or zero dependency on one another, making the coupling low. The lower coupling will allow easier debugging of our system.
-        
+        Overall, our design implements good design practices into the ChocAn system, alllowing for future alterations and maintainability.
     </h1>
     <!--<p></p>-->
 
