--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -84,7 +84,7 @@
     </table>
 
     <!--Bitbucket Statistics-->
-    <!--<img src="./src/bitbucket.png">-->
+    <img src="./src/bitbucket.png">
 
     <!-- Complete Class Diagram -->
     <h1>Complete Class Diagram</h1>
