--- a/Team7_Design/Report.html
+++ b/Team7_Design/Report.html
@@ -117,14 +117,14 @@
 
 
     <!--Paragraph-->
-    <h1>Our ChocAn system's design is good because it implements key aspects of quality modules, through the application of high cohesion and low coupling. 
+    <h1>Paragraph</h1>
+    <p>Our ChocAn system's design is good because it implements key aspects of quality modules, through the application of high cohesion and low coupling. 
         The classes we used demonstrate informational cohesion, meaning methods performed operate on the same information or data. The high cohesion makes the 
         code easier to maintain. We can easily design, write, and test our code since the code for a module is all located together and works together.
         Additionally, the classes have low or zero dependency on one another, making the coupling low. By aiming for low coupling, changes can 
         easily be made to the structure of modules without worrying about their impact on other modules in the system. 
         The lower coupling will allow easier debugging of our system if errors do arise.
         Overall, our design implements good design practices into the ChocAn system, making it easier for future alterations to modules and maintainability of the design.
-    </h1>
-    <!--<p></p>-->
+    </p>
 
 </html>
